Update src/ext/java/org/opentripplanner/ext/vectortiles/layers/vehicleparkings/VehicleParkingGroupsLayerBuilder.java
Co-authored-by: Leonard Ehrenfried <mail@leonard.io>